# ozone

./: Cargo.toml  cspell.json  justfile  mise.toml  rustfmt.toml  tomlfmt.toml
.cargo/: config.toml
config/: config.kdl
config/bind/acls/: private.kdl  public.kdl
config/bind/views/: external.kdl  internal.kdl
config/zones/: d77.kemo.labs.kdl  domain.com.kdl  example.com.kdl  example.labs.kdl  example.net.kdl  lab.kemo.network.kdl
crates/apps/cli/: Cargo.toml
crates/apps/cli/src/: error.rs  main.rs
crates/libs/lib-cfg/: Cargo.toml
crates/libs/lib-cfg/src/: cli.rs  include.rs  lib.rs  records.rs  utils.rs  zone.rs
crates/libs/lib-cfg/src/bind/: acl.rs  mod.rs  view.rs
crates/libs/lib-tmpl/: Cargo.toml  askama.toml
crates/libs/lib-tmpl/src/: error.rs  lib.rs  utils.rs
crates/libs/lib-tmpl/src/generator/: adblock.rs  bind.rs  mod.rs  zones.rs
crates/libs/lib-tmpl/src/templates/: bind.rs  mod.rs  zones.rs
crates/libs/lib-tmpl/src/templates/files/: bind-zone.tmpl  bind.tmpl  zone copy.tmpl  zone.tmpl
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: files.rs  lib.rs  net.rs
