[package]
name = "lib-cfg"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
kdl = { workspace = true, features = ["v1"] }
knus = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true, features = [] }
chrono = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
glob = { workspace = true }
tracing-panic = { workspace = true }
lib-utils = { workspace = true }
path-clean = { workspace = true }

[dev-dependencies]
miette = { workspace = true, features = ["fancy"] }

[lints]
workspace = true
